# edu_meet_admin

./: .gitignore  Makefile  manage.py  package.json  pyproject.toml  schema.sql  setup.cfg
.github/workflows/: deploy.yml
ansible/: .env.j2  hosts.ini  make_deploy.yml
edu_meet_admin_panel/: admin.py  apps.py  asgi.py  models.py  proxy_models.py  settings.py  urls.py  wsgi.py
edu_meet_admin_panel/admin_panel/: __init__.py  filters.py  order_admin.py  slot_admin.py  subject_admin.py  user_admin.py
edu_meet_admin_panel/admin_panel/filters/: orders.py  slots.py
edu_meet_admin_panel/management/commands/: delete_unused_slots.py  init_slots.py
edu_meet_admin_panel/templates/admin/: date_filter.html
edu_meet_admin_panel/tests/: test_delete_unused_slots.py  test_init_slot.py
edu_meet_admin_panel/tests/fixtures/: last_slots.json  slots.json  users.json
